--- a/index.html
+++ b/index.html
@@ -32,20 +32,20 @@
             <a href="/sixth" data-panel="sixth">6</a>
         </div>
     </header>  -->
-    
+
     <div class="outer-container">
-        
+
         <!-- containing blocks -->
-        <section class="full block block-1" data-panel="first"><p>sometimes...<span>|</span></p></section>
-        <section class="full block block-2" data-panel="second">
-            <div class="bk-2-inner"><p class="p1">It <span>feels</span> like you</p><p class="p2"> never really</p></div></section>
+        <section class="full block block-1" data-panel="first"><p class="typewriter">sometimes...<span>|</span></p></section>
+        <section class="full block block-2" data-panel="second"><p>It <span>feels</span> like</p></section>
+        <section class="full block block-2.2" data-panel="second-follow"><p>you never <span>really</span></p></section>
         <section class="full block block-3" data-panel="thrid"><p>listen</p></section>
         <section class="full block block-4" data-panel="fourth"><p>to me</p></section>
         <section class="full block block-5" data-panel="fifth"><p>I <span>know</span> you can hear me</p></section>
         <section class="full block block-6" data-panel="sixth"><div class="bk-6-inner"><p class="p1">but are you</p><p class="p2">there<span>?</span></p></div></section>
     </div>
-     <footer> 
-         <a href="about.html"><div class="pointer"></div></a>        
+     <footer>
+         <a href="about.html"><div class="pointer"></div></a>
         </footer>
 
 
